fix visible scrollbars

--- a/clients/youtube_viewer_level2_TV/styles/yt-main.styl
+++ b/clients/youtube_viewer_level2_TV/styles/yt-main.styl
@@ -6,4 +6,5 @@ body{
   font-family: source_sans_prolight;
   -webkit-font-smoothing: antialiased;
   font-weight: 500;
+	overflow: hidden;
 }
