--- a/public/youtube_viewer_level2_TV/styles/app.css
+++ b/public/youtube_viewer_level2_TV/styles/app.css
@@ -20,6 +20,7 @@ body {
   font-family: source_sans_prolight;
   -webkit-font-smoothing: antialiased;
   font-weight: 500;
+  overflow: hidden;
 }
 .topbar-overlay-container {
   width: 1920px;
